--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -3,24 +3,40 @@
 <head>
 	<title>Expense Tracker</title>
     <link rel="stylesheet" href="/static/styles.css">
+    <script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
 </head>
 <body>
-<h1>Expenses</h1>
+<h1 id='h1'>Expenses</h1>
 {% if msgs %}
-	<ul>
-	    {% for msg in msgs %}
-	        <li>{{msg.date}} {{msg.description}} {{ msg.amount }} {{msg.category}}</li>
-	    {% endfor %}
-	</ul>
+	<div>
+        <ul>
+    	    {% for msg in msgs %}
+    	        <li id={{msg.category}}>{{msg.date}} {{msg.description}} {{ msg.amount }} {{msg.category}}</li>
+    	    {% endfor %}
+    	</ul>
+    </div>
     {% if categories %}
-        <form method='POST' autocomplete="off">
-            {% for category in categories %}
-                <input type="checkbox" name="category" value={{category}}>{{category}}<br>
-            {% endfor %}
-            <input type="checkbox" name="category" value="Other">Other<br>
-            <input class="btn" type="submit" value="Submit">
-        </form>
+        <div>
+            <form method='POST' autocomplete="off">
+                {% for category in categories %}
+                    <input class="checkbox" id="checkbox-{{category}}" type="checkbox" checked="True" name="category" value={{category}}>{{category}}<br>
+                {% endfor %}
+                <input class="btn" type="submit" value="Submit">
+            </form>
+        </div>
     {% endif %}
 {% endif %}
+<script>
+    $('.checkbox').click(function(){
+        var cat = $(this).attr('value');
+        if ($(this).attr('checked')){
+            $('#'+cat).hide()
+            $(this).attr('checked',false)
+        } else {
+            $(this).attr('checked',true)
+            $('#'+cat).show()
+        };
+    });
+</script>
 </body>
 </html>
