--- a/static/styles.css
+++ b/static/styles.css
@@ -1,7 +1,46 @@
 body {
-    background-color: #D1ABAE;
+    background-color: #EFEFEF;
+    font-family: 'Helvetica', 'Arial', sans-serif;
+    color: #A9A9A9;
 }
 
 h1 {
+    color: black;
+    opacity: .7;
+    text-align: center;
+    font-style: italic;
+}
+
+.expenses {
+    width: 100%;
+    max-width: 800px;
+    margin: 0 auto;
+}
+
+.expense {
+    background-color: #CAEBF2;
+    font-size: 12px;
+    opacity: .7;
+    color: black;
+    margin: 20px;
+    border: 1px solid black;
+    border-radius: 15px;
+}
+
+.expense .upper-bar {
+    border-bottom: 1px dashed black;
+    padding: 5px 10px;
+}
+
+.expense .lower-bar {
+    font-size: 1.25em;
+    padding: 10px 10px;
+}
+
+.category, .amount {
+    float: right;
+}
+
+.categories {
     text-align: center;
 }
