Added total and javascript to update total depending on categories checked

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -14,6 +14,9 @@
                     <input class="checkbox" id="checkbox-{{category}}" type="checkbox" checked="True" name="category" value={{category}}>{{category}}<br>
                 {% endfor %}
             </form>
+            <span>
+                <p>total = <span id='total'></span></p>
+            </span>
         </section>
     {% endif %}
     <section class="expenses">
